bugfix: extra gap on the top of the tab

--- a/style.css
+++ b/style.css
@@ -143,7 +143,6 @@ ul {
 .tab-links {
   display: flex;
   align-items: center;
-  padding-top: 0.4rem;
 }
 
 .tab-link {
@@ -153,7 +152,7 @@ ul {
 .tab-button {
   width: 100%;
   border: none;
-  padding: 1rem 0;
+  padding: 1.4rem 0 1rem 0;
   border-bottom: 2px solid transparent;
   background-color: transparent;
 }
